--- a/backend/.github/workflows/backend_ci.yml
+++ b/backend/.github/workflows/backend_ci.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests
+      - name: Run unit tests
         run: npm test
