--- a/.github/workflows/main_ci.yml
+++ b/.github/workflows/main_ci.yml
@@ -12,15 +12,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install dependencies
+      - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: 18
-        working-directory: backend
+
+      - name: Install dependencies
+        run: |
+          cd backend
+          npm ci
 
       - name: Run backend unit tests
-        run: npm test
-        working-directory: backend 
+        run: |
+          cd backend
+          npm test
 
   frontend:
     runs-on: ubuntu-latest
@@ -28,12 +33,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install dependencies
+      - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: 18
-        working-directory: frontend
 
-      - name: Build frontend
-        run: npm run build
-        working-directory: frontend
+      - name: Install dependencies
+        run: |
+          cd frontend
+          npm ci
+
+      - name: Run backend unit tests
+        run: |
+          cd frontend
+          npm run build
