--- a/.github/workflows/main_ci.yml
+++ b/.github/workflows/main_ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Run backend unit tests
         run: |
           cd backend
-          npm test
+          npm test -- --exit
 
   frontend:
     runs-on: ubuntu-latest
