--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "lint-fix": "eslint '**/*.js' --fix"
   },
   "keywords": [],
   "author": "",
